# go-dataloader

./: .gitignore  BUILD  CHANGELOG.md  MODULE.bazel  README.md  cache.go  dataloader.go  dataloader_test.go  def.go  go.mod  option.go  trace.go
.github/workflows/: codecov.yaml
mockopt/: BUILD.bazel  cache.go
